[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiomysql>=0.3.2",
    "alembic>=1.18.5",
    "apscheduler>=3.11.3",
    "asyncmy>=0.2.11",
    "fastapi>=0.139.1",
    "greenlet>=3.5.3",
    "httpx[socks]>=0.28.1",
    "langchain-core>=1.4.9",
    "langchain-openai>=1.3.5",
    "langgraph>=1.2.9",
    "pydantic-settings>=2.14.2",
    "sqlalchemy>=2.0.51",
    "sse-starlette>=3.4.5",
    "uvicorn>=0.51.0",
]
